 * Replace usages of [Protect-String](http://get-carbon.org/help/Protect-String.html)'s `Scope` parameteter with the `ForUser` or `ForComputer` scope-specific switches, e.g. replace `Protect-String -String 'MySooperSecretPassword' -Scope LocalMachine` with `Protect-String -String 'MySooperSecretPassword` -ForComputer`.
 
## Enhancements
 * Created new [Get-WindowsFeature](http://get-carbon.org/help/Get-WindowsFeature.html) function for getting a list of available Windows features.
 * [Test-WindowsFeature](http://get-carbon.org/help/Test-WindowsFeature.html) now tests if a Windows feature exists, instead of if it is installed.  Added an `Installed` switch to detect if a feature exists *and* if it is installed.
 * `Install-WindowsFeatures` renamed to [Install-WindowsFeature](http://get-carbon.org/help/Install-WindowsFeature.html).
 * Renamed [Install-WindowsFeature](http://get-carbon.org/help/Install-WindowsFeature.html)'s `Features` parameter to `Name`.
 * Removed `Install-WindowsFeatureIis` and replaced with `Iis` and `IisHttpRedirection` switches on [Install-WindowsFeature](http://get-carbon.org/help/Install-WindowsFeature.html).
 * Removed `Install-WindowsFeatureMsmq` and replaced with `Msmq`, `MsmqHttpSupport`, and `MsmqActiveDirectoryIntegration` switches on [Install-WindowsFeature](http://get-carbon.org/help/Install-WindowsFeature.html).
 * `Uninstall-WindowsFeatures` renamed to [Uninstall-WindowsFeature](http://get-carbon.org/help/Uninstall-WindowsFeature.html).
 * Renamed [Uninstall-WindowsFeature](http://get-carbon.org/help/Uninstall-WindowsFeature.html)'s `Features` parameter to `Name`.
 * Added `Iis`, `IisHttpRedirection`, `Msmq`, `MsmqHttpSupport`, and `HttpActiveDirectoryIntegration` switches to [Uninstall-WindowsFeature](http://get-carbon.org/help/Uninstall-WindowsFeature.html).